Refactor : FinalFrameState states LinkedList로 변경